[package]
name = "can-messages-trait"
version = "0.1.0"
edition = "2024"

[features]
embassy = [ ]
stm32f042f6 = [ "embassy", "embassy-stm32/stm32f042f6" ]

[dependencies]
can-messages-derive = { version = "0.1.0", path = "can-messages-derive" }
embassy-stm32 = { version = "0.6.0", optional = true }
zerocopy = { version = "0.8.26", features = ["derive"] }
